--- a/src/index.css
+++ b/src/index.css
@@ -187,9 +187,10 @@ select:hover {
 }
 
 .results_heading {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-family: "Ubuntu";
   text-align: center;
+  padding: 1rem;
 }
 
 .percentage {
@@ -210,6 +211,65 @@ select:hover {
   border: 2px rgb(14, 180, 14) solid;
 }
 
+.about_section {
+  background-color: #2c394b;
+  margin-top: 10%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: left;
+}
+
+.about_container {
+  background-color: #2c394b;
+  padding: 2rem;
+  border-radius: 20px;
+  height: fit-content;
+}
+
+.about_container h1 {
+  font-size: 2rem;
+  font-family: "Ubuntu";
+  text-transform: uppercase;
+  font-weight: 900;
+  color: rgb(136, 134, 134);
+}
+
+.about_container p {
+  width: 80%;
+  height: 100%;
+  color: gray;
+  font-size: 1rem;
+  font-family: "Roboto Mono", monospace;
+  margin: 1rem 0;
+  padding: 1rem 0;
+}
+
+.about_buttons {
+  width: auto;
+  display: flex;
+  gap: 2rem;
+}
+
+.about_buttons button {
+  width: max-content;
+  height: fit-content;
+  padding: 0.8rem 0.7rem;
+  background-color: #374d5e;
+  color: white;
+  font-size: 1rem;
+  font-family: "Roboto Mono";
+  border: none;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transition: 0.5s;
+}
+
+.about_buttons button:hover {
+  background-color: #638299;
+  transform: translateY(2px);
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   html {
