--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #082032;
 }
+
 .html {
   font-size: 16px;
 }
@@ -103,6 +104,7 @@ select:hover {
   background-color: teal;
   padding: 0.3rem 0.8rem;
   font-family: "Ubuntu";
+  font-size: 1rem;
 }
 
 .about_project:hover {
@@ -306,7 +308,7 @@ select:hover {
   background-color: #2c394b;
   padding: 2rem;
   border-radius: 20px;
-  height: fit-content;
+  height: 100%;
 }
 
 .about_container h1 {
